--- a/app/views/links/new.erb
+++ b/app/views/links/new.erb
@@ -1,2 +1,14 @@
 <h1>Add your website here</h1>
-  <form action="/links/"
+  <form action="/links/add" method="post">
+    <label for="title">
+      Title:
+      <input type="text" name="title">
+    </label>
+    <label for="url">
+      URL:
+      <input type="text" name="url">
+    </label>
+    <input type="submit" name="submit" value="Add site">
+  </form>
+
+<a href="/">Bookmarks Home</a>
