--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -3,6 +3,7 @@
 <ul id='links'>
   <% @links.each do |link| %>
     <li>
+      ID:    <%= link.id    %>
       Title: <%= link.title %>
       URL:   <%= link.url   %>
     </li>
