--- a/app/views/links/new.erb
+++ b/app/views/links/new.erb
@@ -8,6 +8,10 @@
       URL:
       <input type="text" name="url">
     </label>
+    <label for="tag">
+      Tag:
+      <input type="text" name="tag">
+    </label>
     <input type="submit" name="submit" value="Add site">
   </form>
 
