Adds functionality to create links plus passing tests

--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -1,5 +1,9 @@
 <h1> Links </h1>
 
+<form action="/links/new">
+  <input type="submit" value="Add Link">
+</form>
+
 <ul id='links'>
   <% @links.each do |link| %>
     <li>
@@ -7,4 +11,4 @@
       URL:    <%= link.url %>
     </li>
   <% end %>
-</ul>  
+</ul>
