--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -6,7 +6,7 @@
       ID:    <%= link.id    %>
       Title: <%= link.title %>
       URL:   <%= link.url   %>
-      Tag:   <%= link.tag   %>
+      <!-- Tag:   <%= link.tag   %> -->
     </li>
   <% end %>
 </ul>
