--- a/app/views/links/new.erb
+++ b/app/views/links/new.erb
@@ -11,4 +11,8 @@
     <input type = "text" name = "title"/>
   </label>
   <input type="submit" value="submit"/>
+  <label for = "tag">
+    Tag
+  <input type = "text" name = "tag"/>
+  </label>
 </form>
