--- a/app/views/links/home.erb
+++ b/app/views/links/home.erb
@@ -5,3 +5,7 @@
 </form>
 
  <a href="/links/new">Add link to bookmarks</a>
+
+ <form action="/user/new">
+   <input type="submit" value="Sign up">
+ </form>
