--- a/app/views/links/home.erb
+++ b/app/views/links/home.erb
@@ -1,3 +1,7 @@
+<% if current_user %>
+ Welcome <%= current_user.name %>!<br>
+<% end %>
+
 <h1>Hello internet web surfer</h1>
 
 <form action="/links">
