--- a/app/views/user/sign_up.erb
+++ b/app/views/user/sign_up.erb
@@ -12,7 +12,11 @@ Sign up here:
   </label>
   <label for = "password">
     Enter password:
-  <input type = "text" name = "password"/>
+  <input type = "password" name = "password"/>
+  </label>
+  <label for = "password_confirmation">
+    Re-enter password:
+  <input type = "password" name = "password_confirmation"/>
   </label>
   <input type="submit" value="Sign me up!"/>
 </form>
