--- a/app/views/links/home.erb
+++ b/app/views/links/home.erb
@@ -1,5 +1,6 @@
 <% if current_user %>
- Welcome <%= current_user.name %>!<br>
+ Welcome <%= current_user.name %>!
+ Welcome <%= current_user.email %>!<br>
 <% end %>
 
 <h1>Hello internet web surfer</h1>
@@ -12,4 +13,8 @@
 
  <form action="/user/new">
    <input type="submit" value="Sign up">
+ </form>
+
+ <form action="/sessions/new">
+   <input type="submit" value="Sign in">
  </form>
